# TRION-SDK

./: .buildinfo  .gitignore  .pylintrc  README.md  genindex.html  index.html  objects.inv  preface.html  search.html  searchindex.js  setup.py  trion_api_c_interface.html  trion_api_command_glossary.html  trion_api_details.html  trion_api_teds.html  trion_api_xml.html  trion_introduction.html  trion_sdk_build_instructions.html  trion_sdk_minimal_example.html  trion_system_overview.html
001_Introduction/: Introduction.html
00_InformationRights/: InformationRights.html
trion/C/: CMakeLists.txt  README.md
trion/C/analog/: CMakeLists.txt
trion/C/analog/ADCDelay/: adc_delay.c
trion/C/analog/AIGainSelfJustage/: ai_gain_selfjustage.c
trion/C/analog/AmplifierBalanceAutonomous/: amp_balance_autonomous.c
trion/C/analog/AmplifierBalanceDuringMeasurement/: amp_balance_measurement.c
trion/C/analog/AnalogBridgeScaling/: analog_bridge_scaling.c
trion/C/analog/AnalogScaling/: analog_scaling.c
trion/C/analog/CB16D/: cb16d_msi.c  msidb.xml
trion/C/analog/ChangeInputOffsetDuringMeas/: change_inputoffset_during_meas.c
trion/C/analog/CurrentMeas/: currentmeas.c
trion/C/analog/EnhancedAnalogMeasurement/: enhanced_analog_measurement.c
trion/C/analog/ExcCurMonitor/: exccurmonitor.c
trion/C/analog/ExcVoltMonitor/: excvoltmonitor.c
trion/C/analog/InterfacingTEDS/: interfacingTEDS.c
trion/C/analog/InterfacingTEDSCal/: interfacingTEDSCal.c
trion/C/analog/InterfacingTEDSEx/: interfacingTEDSEx.c
trion/C/analog/InternalVoltageReference/: internal_voltage_reference.c
trion/C/analog/InternalVoltageReferenceEx/: internal_voltage_reference_ex.c
trion/C/analog/MSIMode/: msi_mode.c
trion/C/analog/MinimalExample/: minimal_example.c
trion/C/analog/MultiBoardAnalogChannels/: multi_board_analog_channels.c
trion/C/analog/OneAnalogChannel/: one_analog_channel.c
trion/C/analog/PotiMode/: potimode.c
trion/C/analog/ResistanceMode/: resistance_mode.c
trion/C/analog/ScanDescriptor/: scan_descriptor.c
trion/C/analog/SensorBalanceAutonomous/: sensor_balance_autonomous.c
trion/C/analog/SensorBalanceDuringMeasGroupCommand/: sensor_balance_measurement_gc.c
trion/C/analog/SensorBalanceDuringMeasurement/: sensor_balance_measurement.c
trion/C/analog/TemperatureMode/: temperature_mode.c
trion/C/analog/ThreeWireOffset/: threewireoffset.c
trion/C/analog/dSTGBackgroundModeCheck/: dstg_background_modecheck.c
trion/C/analog/dSTGBridge/: dstg_bridge.c
trion/C/analog/dSTGModeCheck/: dstg_modecheck.c
trion/C/can/: CMakeLists.txt
trion/C/can/CANChannelDecoded/: can_channel_decoded.c
trion/C/can/CANChannelRaw/: can_channel_raw.c
trion/C/can/CANComplexExample/: can_complex_example.c
trion/C/can/CANWriteFrame/: can_write_frame.c
trion/C/counter/OneCounterChannel/: one_counter_channel.c
trion/C/discret/: CMakeLists.txt
trion/C/discret/OneDigitalChannel/: one_digital_channel.c
trion/C/error/: CMakeLists.txt
trion/C/error/DataLostHandling/: datalosthandling.c
trion/C/gps/: CMakeLists.txt
trion/C/gps/GPS/: gps.c
trion/C/misc/ListBoards/: list_boards.c
trion/C/rtx/ChannelPolling/: channelpolling.c
trion/C/rtx/DmaTransfer/: dmatransfer.c
trion/C/rtx/Gps/: gps.c  gps_sync_master_with_single_dma_master.c
trion/C/rtx/GpsOscillatorError/: gps_sync_poll_oscillator_error.c
trion/C/rtx/GpsStartOnExtSignal/: gps_ext_start.c
trion/C/rtx/GpsStartOnExtSignalPPSOut/: gps_ext_start_pps_out.c
trion/C/rtx/LowInterruptDmaTransfer/: dmatransfer.c
trion/C/rtx/SelfJustage/: selfjustage.c
trion/C/rtx/StabilityEvaluation/: stability_evaluation.c
trion/CS/: CMakeLists.txt  README.md
trion/CS/TRION_SDK_CS/: TRION_SDK_CS.sln
trion/CS/TRION_SDK_CS/ADCDelay/: ADCDelay.csproj  adc_delay.cs
trion/CS/TRION_SDK_CS/ListBoards/: ListBoards.csproj  list_boards.cs
trion/CS/TRION_SDK_CS/MultiBoardAnalogChannels/: multi_board_analog_channels.cs
trion/CS/TRION_SDK_CS/MultiBoardDigitalChannels/: multi_board_digital_channels.cs
trion/CS/TRION_SDK_CS/OneAnalogChannel/: one_analog_channel.cs
trion/CS/TRION_SDK_CS/OneDigitalChannel/: OneDigitalChannel.csproj  one_digital_channel.cs
trion/CS/TRION_SDK_CS/TrionApi/: TrionApi.csproj
trion/CS/analog/: CMakeLists.txt  analog_test.cs
trion/CS/analog/ADCDelay/: adc_delay.cs
trion/CS/analog/MultiBoardAnalogChannels/: multi_board_analog_channels.cs
trion/CS/analog/OneAnalogChannel/: one_analog_channel.cs
trion/CS/discret/: CMakeLists.txt
trion/CS/discret/MultiBoardDigitalChannels/: multi_board_digital_channels.cs
trion/CS/discret/OneDigitalChannel/: one_digital_channel.cs
trion/CXX/: CMakeLists.txt
trion/CXX/quickstart/: CMakeLists.txt  quickstart.cpp  quickstart_acq.cpp  quickstart_acq_scaled.cpp  quickstart_acq_scan_desc.cpp  quickstart_acq_scan_desc_scaled.cpp
trion/CXX/synchronization/: CMakeLists.txt  synchronization_ptp.cpp  synchronization_read_time.cpp
trion_api/C/inc/: CMakeLists.txt  dewepxi_apicore.h  dewepxi_apiutil.h  dewepxi_commands.inc  dewepxi_const.h  dewepxi_err.h  dewepxi_err.inc  dewepxi_load.h  dewepxi_loadcore.h  dewepxi_types.h  dewepxinet_load.h
trion_api/CS/: CMakeLists.txt  trion_commands.cs  trion_errors.cs  trion_net_api.cs
trion_api/CS/TrionApi/: TrionApi.cs  TrionApi.sln  trion_net_api.cs  utils.cs
trion_api/CS/templates/: trion_commands.cs.template  trion_errors.cs.template
trion_api/CXX/lib/uni_base/: CMakeLists.txt
trion_api/CXX/lib/uni_base/inc/: uni_assert.h  uni_defines.h  uni_stdio.h  uni_string_buffer.h
trion_api/CXX/lib/uni_base/src/: uni_assert.cpp
trion_api/CXX/lib/xpugixml/: CMakeLists.txt
trion_api/CXX/lib/xpugixml/inc/: xpugixml.h  xpugixml_fwd.h
trion_api/CXX/lib/xpugixml/src/: xpugixml.cpp
trion_api/CXX/trion_api_cxx/: CMakeLists.txt
trion_api/CXX/trion_api_cxx/inc/: dewepxi_apicxx.h
trion_api/CXX/trion_api_cxx/src/: dewepxi_apicxx.cpp
trion_sdk_util/C/: CMakeLists.txt  trion_sdk_util.c  trion_sdk_util.h
trionet/CXX/: CMakeLists.txt
trionet/CXX/analog/: CMakeLists.txt
trionet/CXX/analog/TN_LowLatency/: tn_low_latency.cpp
(+198 files in other folders)
